--- a/AngularApp/tsconfig.json
+++ b/AngularApp/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -22,12 +23,15 @@
       "dom",
       "esnext.asynciterable"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+  
+    
   }
 }
