--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "apollo-angular": "^4.0.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
     "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "apollo-angular": "^4.0.1",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-link-ws": "^1.0.20",
+    "graphql": "^16",
+    "rxjs": "~7.5.0",
+    "subscriptions-transport-ws": "^0.11.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
