--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -14,25 +14,19 @@
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
     "@apollo/client": "^3.0.0",
     "apollo-angular": "^4.0.1",
-    "apollo-angular-link-http": "^1.11.0",
-    "apollo-link-ws": "^1.0.20",
     "graphql": "^16",
     "rxjs": "~7.5.0",
     "subscriptions-transport-ws": "^0.11.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular/cli": "~14.2.2",
+    "@angular-devkit/build-angular": "^14.2.3",
+    "@angular/cli": "^14.2.3",
     "@angular/compiler-cli": "^14.2.0",
-    "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
