--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -4,16 +4,12 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
-    "subscriptions-transport-ws": "^0.11.0",
-    "web-vitals": "^2.1.4"
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
