--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://kmchmk.github.io/SimplestGameEver",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -12,6 +13,8 @@
     "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
