--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
+    "eslint-plugin-import": "^2.26.0",
     "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
@@ -39,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^4.0.0"
   }
 }
